[gd_scene load_steps=2 format=3 uid="uid://d8f4g3h7j2k9l"]

[ext_resource type="Script" path="res://src/scripts/ui/dialogue/character_portrait.gd" id="1_character_portrait"]

[node name="CharacterPortrait" type="Control"]
layout_mode = 3
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_vertical = 2
script = ExtResource("1_character_portrait")

[node name="PortraitContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PortraitSprite" type="TextureRect" parent="PortraitContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -100.0
offset_right = 75.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 4

[node name="NameLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = 10.0
offset_right = 75.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 0
text = "Character Name"
horizontal_alignment = 1